Add Supabase configuration to .env file

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-
+VITE_SUPABASE_URL=https://zfaihewacoppsoxudyug.supabase.co
+VITE_SUPABASE_PUBLISHABLE_KEY=sb_publishable_qv6e77SiZ-QBvBJydA-2Iw_8MBSCx3i
